--- a/src/Login.css
+++ b/src/Login.css
@@ -8,6 +8,26 @@
     width: 60rem;
     height: 18rem;
 }
+@media screen and (max-width: 1368px) {
+    .login > img {
+        width: 41rem;
+        height: 13rem;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    .login > img {
+        width: 30rem;
+        height: 9rem;
+    }
+}
+@media screen and (max-width: 480px) {
+    .login > img {
+        width: 20rem;
+        height: 6rem;
+    }
+}
 .login > a {
     padding: 20px;
     border-radius: 99px;
