--- a/src/Body.css
+++ b/src/Body.css
@@ -3,6 +3,6 @@
     height: 100vh;
     flex: 0.8;
     color: white;
-    background: linear-gradient(18deg,#f5c2e7 20%, #1e1e2e 100%);
+    background: linear-gradient(19deg,#f5c2e7 20%, #a6e3a1 100%);
 
 }
