--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -6,11 +6,22 @@
     padding-right: 1rem;
     color: #cdd6f4;
     background-color: #585b70;
-    background: linear-gradient(18deg,#585b70 20%, #1e1e2e 100%);
+    background: linear-gradient(181deg, #181825 20%, #f5c2e7 100%);
+}
+.sidebar > hr {
+    border: 1px solid #9399b2;
+    width: 90%;
+    margin: 1rem auto;
 }
 .sidebar-logo {
     margin-left: 1rem;
     padding-top: 1rem;
+    margin-bottom: 1rem;
     width: 10rem;
     object-fit: contain;
+}
+.sidebar-title {
+    margin-left: 1rem;
+    padding: 0.5rem;
+    font-size: 1rem;
 }
