--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,5 +1,7 @@
 .sidebar {
-    height: 100vh;
+    overflow-y: scroll;
+    padding: 2rem;
+    height:100vh;
     flex: 0.2;
     min-width: 15rem;
     padding-left: 1rem;
@@ -17,7 +19,7 @@
     margin-left: 1rem;
     padding-top: 1rem;
     margin-bottom: 1rem;
-    width: 10rem;
+    width: 8rem;
     object-fit: contain;
 }
 .sidebar-title {
@@ -25,3 +27,4 @@
     padding: 0.5rem;
     font-size: 1rem;
 }
+
